--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,58 @@
+absl-py==0.1.13
+amqp==2.2.2
+appnope==0.1.0
+astor==0.6.2
+billiard==3.5.0.3
+bleach==1.5.0
+celery==4.1.0
+certifi==2018.1.18
+chardet==3.0.4
+cognitive-face==1.3.1
+cycler==0.10.0
+decorator==4.2.1
 Django==2.0.3
 django-templated-mail==1.1.1
 djangorestframework==3.7.7
 djangorestframework-jwt==1.11.0
 djoser==1.1.5
+gast==0.2.0
+grpcio==1.10.0
+html5lib==0.9999999
+idna==2.6
+ipython==6.2.1
+ipython-genutils==0.2.0
+jedi==0.11.1
+kiwisolver==1.0.1
+kombu==4.1.0
+Markdown==2.6.11
+matplotlib==2.2.2
+mkl-fft==1.0.0
+mkl-random==1.0.1
+numpy==1.14.2
+parso==0.1.1
+pexpect==4.4.0
+pickleshare==0.7.4
 Pillow==5.0.0
+prompt-toolkit==1.0.15
+protobuf==3.5.2.post1
 psycopg2==2.7.4
+ptyprocess==0.5.2
+Pygments==2.2.0
 PyJWT==1.6.1
+pyparsing==2.2.0
+python-dateutil==2.7.2
 pytz==2018.3
+requests==2.18.4
 rest-condition==1.0.3
+scipy==1.0.1
+simplegeneric==0.8.1
+six==1.11.0
+tensorboard==1.7.0
+tensorflow==1.3.0
+tensorflow-tensorboard==0.1.8
+termcolor==1.1.0
+traitlets==4.3.2
+urllib3==1.22
+vine==1.1.4
+wcwidth==0.1.7
+Werkzeug==0.14.1
