--- a/requirements.txt
+++ b/requirements.txt
@@ -39,9 +39,11 @@ psycopg2==2.7.4
 ptyprocess==0.5.2
 Pygments==2.2.0
 PyJWT==1.6.1
+pymongo==3.6.1
 pyparsing==2.2.0
 python-dateutil==2.7.2
 pytz==2018.3
+redis==2.10.6
 requests==2.18.4
 rest-condition==1.0.3
 scipy==1.0.1
